if(RL_TOOLS_EXPERIMENTAL)
    add_executable(nn_models_port_checkpoint_raptor main.cpp)
    target_link_libraries(nn_models_port_checkpoint_raptor PRIVATE RLtools::Core)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/policy.h")
        add_executable(nn_models_port_checkpoint_raptor_check_policy check_policy.cpp)
        target_link_libraries(nn_models_port_checkpoint_raptor_check_policy PRIVATE RLtools::Core)
    endif()
endif()
